--- a/styles/style.css
+++ b/styles/style.css
@@ -673,7 +673,51 @@ ul {
 }
 
 /* Контакти */
+.contacts-content {
+    display: flex;
+    justify-content: space-between;
+    /* Розташовує елементи зліва і справа */
+    align-items: flex-start;
+    /* Вирівнює елементи по верхньому краю */
+    gap: 20px;
+    /* Відступ між блоками */
+}
+
+.contacts-info {
+    flex: 1;
+    /* Ліва частина займає одну частину простору */
+}
+
+.contacts-documents {
+    flex: 1;
+    /* Права частина займає одну частину простору */
+    text-align: right;
+    /* Вирівнювання тексту по лівому краю */
+    margin-top: 4%;
+    color: #FFFFFF;
+}
+
+
+.contacts-documents ul {
+    list-style: none;
+    padding: 0;
+}
+
+
+.contacts-documents i {
+    margin-right: 5px;
+}
+
+.contacts-documents ul li a {
+    color: #FFFFFF;
+
+    text-decoration: none;
+}
+
+
+
 .contacts {
+
     background-color: #303038;
     color: #ffffff;
     padding: 20px 0;
@@ -725,4 +769,18 @@ ul {
     font-size: 0.9rem;
     color: #b0b0b0;
     margin-top: 15px;
+}
+
+.video-container {
+    margin: 20px auto;
+    text-align: center;
+    max-width: 100%;
+}
+
+.video-container .fb-video {
+    width: 100%;
+    max-width: 700px;
+    height: auto;
+    border: none;
+    overflow: hidden;
 }
