--- a/styles/style.css
+++ b/styles/style.css
@@ -210,10 +210,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0px 20px;
+    padding: 20px;
     background: var(--bg-color);
-    color: #000000;
-    text-align: center;
+    color: #000;
 }
 
 .about-title {
@@ -222,21 +221,36 @@ body {
     color: #000000;
 }
 
-.about-description,
-.about-expanded {
-    text-align: justify;
-    max-width: 1200px;
+.about-content {
+    display: block;
+
     margin: 0 auto;
-    padding: 0 20px;
+}
+
+.about-video {
+    float: right;
+    /* Відео обтікається текстом справа */
+    width: 500px;
+    min-height: 280px;
+    margin: 0 0 20px 20px;
+    /* Відступи навколо відео */
+}
+
+.about-description {
+    text-align: justify;
     line-height: 1.6;
     font-size: 1.2rem;
 }
 
-.about-expanded {
-    margin-top: 15px;
-    color: #000000;
-    /* Трохи темніший колір для відокремлення */
+
+@media (max-width: 768px) {
+    .about-video {
+        float: none;
+        margin: 0 auto 20px;
+        display: block;
+    }
 }
+
 
 
 
@@ -390,6 +404,10 @@ body {
     color: var(--text-color);
 }
 
+.accordion-content ol {
+    margin-left: 20px;
+}
+
 /* Стрілка */
 .accordion-header::after {
     content: '\2193';
@@ -455,7 +473,7 @@ ul {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
     text-align: center;
     transition: transform 0.3s ease;
     flex-basis: 30%;
@@ -769,18 +787,4 @@ ul {
     font-size: 0.9rem;
     color: #b0b0b0;
     margin-top: 15px;
-}
-
-.video-container {
-    margin: 20px auto;
-    text-align: center;
-    max-width: 100%;
-}
-
-.video-container .fb-video {
-    width: 100%;
-    max-width: 700px;
-    height: auto;
-    border: none;
-    overflow: hidden;
 }
