--- a/styles/style.css
+++ b/styles/style.css
@@ -230,8 +230,8 @@ body {
 .about-video {
     float: right;
     /* Відео обтікається текстом справа */
-    width: 500px;
-    min-height: 280px;
+    width: 50%;
+    min-height: 330px;
     margin: 0 0 20px 20px;
     /* Відступи навколо відео */
 }
@@ -306,6 +306,24 @@ body {
     color: #21223f;
     display: block;
 }
+
+.number {
+    opacity: 0;
+    /* Початково невидимі */
+    transform: translateY(20px);
+    /* Зсув вниз */
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    /* Плавність змін */
+}
+
+.number.animated {
+    opacity: 1;
+    /* Повна видимість */
+    transform: translateY(0);
+    /* Повертаємо на місце */
+}
+
+
 
 .counter p {
     margin-top: 10px;
