--- a/styles/style.css
+++ b/styles/style.css
@@ -404,10 +404,10 @@ body {
 
 /* Стрілка */
 .accordion-header::after {
-    content: '\2193';
+    content: '\1F83B';
     /* Юнікод для стрілки вниз */
     position: absolute;
-    right: 50px;
+    right: 20px;
     bottom: -15px;
     top: 50%;
     transform: translateY(-50%);
@@ -875,7 +875,7 @@ ul {
     }
 
     .accordion .accordion-header {
-        font-size: 1.2rem;
+        font-size: 0.85rem;
         /* Зменшення розміру заголовка */
     }
 
@@ -889,16 +889,33 @@ ul {
         max-width: 100%;
     }
 
+    .gallery-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        gap: 10px;
+    }
+
     .gallery-item {
-        width: calc(50% - 10px);
-        height: auto;
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+    }
+
+    .gallery-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 0px;
+        /* Забезпечує обрізання зображення по контейнеру */
+    }
+
+    .gallery-item:last-child {
+        grid-column: 1 / -1;
+        /* Останнє зображення займає весь ряд */
+        justify-self: center;
+        /* Вирівнювання по центру */
     }
 }
-
-
-
-
-
 
 
 
@@ -926,18 +943,8 @@ ul {
         padding: 15px;
     }
 
-    .gallery-item img {
-        width: 100%;
-        height: auto;
-    }
-
     .contacts-info p {
         font-size: 1rem;
-    }
-
-    .gallery-item {
-        width: 100%;
-        margin-bottom: 10px;
     }
 
     .contacts-content {
@@ -953,4 +960,5 @@ ul {
     .contacts-documents {
         display: none;
     }
+
 }
